--- a/.babelrc
+++ b/.babelrc
@@ -1,13 +1,10 @@
 {
-  "plugins": ["@babel/plugin-proposal-class-properties"],
   "presets": [
     [
       "@babel/preset-env",
       {
-        "corejs": 2,
-        "useBuiltIns": "usage",
-        "targets": {
-          "node": "6.9.0"
+        targets: {
+          browsers: 'node >=16.0.0'
         }
       }
     ]
